# TapeSorter

./: .gitignore  CMakeLists.txt  README.md  config.txt  generate_bin.sh  main.cpp
include/: FileTapeDevice.h  TapeDevice.h  TapeSorter.h  config.h
src/: FileTapeDevice.cpp  TapeSorter.cpp  config.cpp
test/: file_tape_device_tests.cpp  tape_sorter_tests.cpp
